--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # Environment: Development
 # Description: Environment variables for development environment
 # Note: Do not commit sensitive information to version control
-VITE_FOODSTOCK_PLATFORM_API_URL="http://localhost:3000/api/v1"
+VITE_FOODSTOCK_PLATFORM_API_URL="https://68ea0557f1eeb3f856e5cfc4.mockapi.io/api/v1"
