--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 # Environment: Development
 # Description: Environment variables for development environment
 # Note: Do not commit sensitive information to version control
-VITE_FOODSTOCK_PLATFORM_API_URL="http://localhost:3000"
+VITE_FOODSTOCK_PLATFORM_API_URL="https://68ea0557f1eeb3f856e5cfc4.mockapi.io/api/v1"
+VITE_FOODSTOCK2_PLATFORM_API_URL="https://68ea09eff1eeb3f856e5e45d.mockapi.io/api/v1"
+
